fix(style): mitigate transform rendering problem on Safari

--- a/src/components/Navigation/Navigation.scss
+++ b/src/components/Navigation/Navigation.scss
@@ -46,12 +46,13 @@
     }
 
     .page-app-title {
-      font-size: b(8);
+      display: inline-block;
+      font-size: b(5);
       font-weight: 500;
       line-height: 1;
       opacity: 0;
-      transform: translateY(15%);
-      transition: opacity 200ms ease, transform 200ms ease;
+      transform: translate3d(0, 25%, 0);
+      transition: opacity 300ms ease, transform 300ms ease;
 
       @include no-mobile {
         position: absolute;
@@ -60,7 +61,7 @@
 
       &.show {
         opacity: 1;
-        transform: translateY(0%);
+        transform: translate3d(0, 0%, 0);
       }
     }
 
